viewer: fix momentum/kinetic scroll on Safari and Firefox on iOS
GitHub: closes #253
(cherry picked from commit 3e22ce02fb569d1db06e7a8f564c5aa328dfb92e)

--- a/viewer/src/assets/scss/scrollbar.scss
+++ b/viewer/src/assets/scss/scrollbar.scss
@@ -23,6 +23,10 @@
 
 .scrollbar {
   overflow: auto;
+
+  // enable momentum/kinetic scroll on Safari and Firefox on iOS
+  -webkit-overflow-scrolling: touch;
+
   scrollbar-color: $scrollbar-color transparent;
   scrollbar-width: thin;
   &::-webkit-scrollbar {
